--- a/web/public/app/views/main.html
+++ b/web/public/app/views/main.html
@@ -1,3 +1,4 @@
+<!-- 
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
@@ -34,3 +35,6 @@
 <div class="footer">
   <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
 </div>
+ -->
+
+<div id="svgArea" style="border:solid 1px gray;" />
