--- a/android/app/src/main/assets/html/views/main.html
+++ b/android/app/src/main/assets/html/views/main.html
@@ -35,4 +35,4 @@
 <div class="footer">
   <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
 </div>
- --><div id="svgArea" style="border:solid 1px gray">
+ --><div id="svgArea" style="border:solid 1px gray; width:200px; height:200px">
