--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -37,4 +37,4 @@
 </div>
  -->
 
-<div id="svgArea" style="border:solid 1px gray;" />
+<div id="svgArea" style="border:solid 1px gray; width:200px; height:200px;" />
