removeボタン実装

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -38,3 +38,4 @@
  -->
 
 <div id="svgArea" style="border:solid 1px gray;" />
+<p><a id="btn-remove" class="btn btn-default" ng-click="removeLine()"><span class="fa fa-eraser"></span></a></p>
