--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -38,4 +38,15 @@
  -->
 
 <div id="svgArea" style="border:solid 1px gray;" />
+<div class="tools">
+  <div class="color" id="color1"></div>
+  <div class="color" id="color2"></div>
+  <div class="color" id="color3"></div>
+  <div class="color" id="color4"></div>
+  <div class="color" id="color5"></div>
+  <div class="color" id="color6"></div>
+  <div class="color" id="color7"></div>
+  <div class="color" id="color8"></div>
+  <div class="color" id="color9"></div>
+</div>
 <p><a id="btn-remove" class="btn btn-default" ng-click="removeLine()"><span class="fa fa-eraser"></span></a></p>
