線色変更可。削除ボタン。

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -48,5 +48,5 @@
   <div class="color" id="color7"></div>
   <div class="color" id="color8"></div>
   <div class="color" id="color9"></div>
+  <div class="delete" id="delete" ng-click="removeLine()">DEL</div>
 </div>
-<p><a id="btn-remove" class="btn btn-default" ng-click="removeLine()"><span class="fa fa-eraser"></span></a></p>
