--- a/web/app/styles/main.css
+++ b/web/app/styles/main.css
@@ -133,4 +133,13 @@ body {
 .select {
     border-color: #66F !important;
 }
+.delete {
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
+    border-radius:20px
+}
+#delete {
+    background-color:#555;
+    font-size:10px!important
+}
 
