--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -37,7 +37,7 @@
 </div>
  -->
 
-<div id="svgArea" style="border:solid 1px gray;" />
+<div id="svgArea" style="border:solid 1px gray;"></div>
 <div class="tools">
   <div class="color" id="color1"></div>
   <div class="color" id="color2"></div>
