androidから画像セット出来たけどサイズが変

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -37,7 +37,7 @@
 </div>
  -->
 
-<div id="svgArea" style="border:solid 1px gray;width: 200px; height: 200px;"></div>
+<div id="svgArea" style="border:solid 1px gray;"></div>
 <div class="tools">
   <div class="color" id="color1"></div>
   <div class="color" id="color2"></div>
@@ -49,4 +49,5 @@
   <div class="color" id="color8"></div>
   <div class="color" id="color9"></div>
   <div class="delete" id="delete" ng-click="removeLine()">DEL</div>
+  <div><button onclick="javascript:hoge()"></button></div>
 </div>
