--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -38,6 +38,7 @@
  -->
 
 <div id="svgArea" style="border:solid 1px gray;"></div>
+<pre>{{degug|json}}</pre>
 <div class="tools">
   <div class="color" id="color1"></div>
   <div class="color" id="color2"></div>
@@ -48,6 +49,7 @@
   <div class="color" id="color7"></div>
   <div class="color" id="color8"></div>
   <div class="color" id="color9"></div>
+  <div class="line-type" id="line-type" ng-click="toggleLineType(lineType)">{{lineType}}</div>
   <div class="delete" id="delete" ng-click="removeLine()">DEL</div>
   <div><button onclick="javascript:hoge()"></button></div>
 </div>
