svg.math.jsがminifyしても動くように

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -40,7 +40,7 @@
 <div id="svgArea" style="border:solid 1px gray;"></div>
 <pre>{{degug|json}}</pre>
 <div class="tools">
-  <div class="color" id="color1"></div>
+  <div class="color select" id="color1"></div>
   <div class="color" id="color2"></div>
   <div class="color" id="color3"></div>
   <div class="color" id="color4"></div>
