--- a/android/app/src/main/res/layout/activity_book_list.xml
+++ b/android/app/src/main/res/layout/activity_book_list.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/book_list"
-    android:name="jp.caliconography.one_liners.bookListFragment"
+    android:name="jp.caliconography.one_liners.BookListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
