--- a/android/app/src/main/res/layout/list_item_sample.xml
+++ b/android/app/src/main/res/layout/list_item_sample.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:id="@+id/panel_content"
     android:layout_width="match_parent"
@@ -11,7 +10,7 @@
         android:id="@+id/txt_line1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btn_go"
