--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -37,26 +37,28 @@
 </div>
  -->
 
-<div id="svgArea" style="border:solid 1px gray;"></div>
-<div class="tools">
-  <div class="line-type" id="line-type" ng-click="toggleLineType(lineType)">{{lineType}}</div>
-  <div class="delete" id="delete" ng-click="removeLine()">DEL</div>
+<div id="main-view" style="background-color:#eee;">
+<div id="svgArea" style="/*border:solid 1px gray;*/"></div>
+<div class="tools" style="/*height:20px;*/">
+   <div id="color-box" style="position:relative;">
+    <div id="color-box-base" class="color tool" style="position:0;" ng-click="slideToggleColor()"></div>
+    <div id="color-list" style="position:0;width:20px;height:200px;bottom:0;display:none;">
+      <div class="color tool select" id="color1" style=""></div>
+      <div class="color tool" id="color2" style=""></div>
+      <div class="color tool" id="color3" style=""></div>
+      <div class="color tool" id="color4" style=""></div>
+      <div class="color tool" id="color5" style=""></div>
+      <div class="color tool" id="color6" style=""></div>
+      <div class="color tool" id="color7" style=""></div>
+      <div class="color tool" id="color8" style=""></div>
+      <div class="color tool" id="color9" style=""></div>
+    </div>
+  </div>
+  <div class="line-type tool" id="line-type" ng-click="toggleLineType(lineType)">{{lineType}}</div>
+  <div class="delete tool" id="delete" ng-click="removeLine()">DEL</div>
   <div><button onclick="javascript:hoge()"></button></div>
 
 </div>
-  <div style="height:200px;"></div>
-  <div id="color-box" style="position:relative;border:solid gray 1px;width:20px;height:20px;">
-    <div id="color-box-base" style="position:0;width:20px;height:20px;" ng-click="slideToggleColor()"></div>
-    <div id="color-list" style="position:0;width:20px;height:200px;bottom:0;display:none;">
-      <div class="color select" id="color1" style="width:20px;height:20px;"></div>
-      <div class="color" id="color2" style="width:20px;height:20px;"></div>
-      <div class="color" id="color2" style="width:20px;height:20px;"></div>
-      <div class="color" id="color3" style="width:20px;height:20px;"></div>
-      <div class="color" id="color4" style="width:20px;height:20px;"></div>
-      <div class="color" id="color5" style="width:20px;height:20px;"></div>
-      <div class="color" id="color6" style="width:20px;height:20px;"></div>
-      <div class="color" id="color7" style="width:20px;height:20px;"></div>
-      <div class="color" id="color8" style="width:20px;height:20px;"></div>
-      <div class="color" id="color9" style="width:20px;height:20px;"></div>
-    </div>
-  </div>
+<!--   <div style="height:200px;border:gray 1px solid;"></div>
+ -->
+</div>
