--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -1,3 +1,15 @@
+// bower:scss
+// endbower
+
+@import "compass";
+
+.browsehappy {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
@@ -15,13 +27,14 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+
+  /* Make the masthead heading the same height as the navigation */
+  h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
+  }
 }
 
 /* Custom page footer */
@@ -31,12 +44,6 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -45,22 +52,28 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+
+  .btn {
+    font-size: 21px;
+    padding: 14px 24px;
+  }
 }
 
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+
+  p + h4 {
+    margin-top: 28px;
+  }
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
+  .container {
+    max-width: 730px;
+  }
+
   /* Remove the padding we set earlier */
   .header,
   .marketing,
@@ -79,30 +92,32 @@ body {
 }
 
 
+
+
+
+
 .tools {
     clear: both;
     /*width: 600px;*/
+  .tool {
+    float: left;
+    font-size: 40px;
+    font-weight: bolder;
+    color: #fff;
+    /*margin: 10px;*/
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 50px;
+    border: 2px solid #eee;
+  /*  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+  */}
 }
 .color {
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+    @include border-radius(10px);
 }
-.tools .tool {
-  float: left;
-  font-size: 40px;
-  font-weight: bolder;
-  color: #fff;
-  /*margin: 10px;*/
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 50px;
-  border: 2px solid #eee;
-/*  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-*/}
 #color1 {
     background-color: #F00;
 }
@@ -134,9 +149,7 @@ body {
     border-color: #66F !important;
 }
 .delete, .line-type {
-    -moz-border-radius:20px;
-    -webkit-border-radius:20px;
-    border-radius:20px
+    @include border-radius(20px);
 }
 #delete, #line-type {
     background-color:#555;
