--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,14 +1,4 @@
-<!-- 
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">public</h3>
-</div>
-
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
@@ -31,13 +21,9 @@
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
 </div>
-
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-</div>
  -->
 
-<div id="main-view" style="background-color:#eee;">
+ <div id="main-view" style="background-color:#eee;;">
 <div id="svgArea" style="/*border:solid 1px gray;*/"></div>
 <div class="tools" style="/*height:20px;*/">
    <div id="color-box" style="position:relative;">
