--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,8 +1,8 @@
-<!-- <div id="main-view" style="background-color:#555;">
+<div id="main-view" style="background-color:#eee;">
   <div id="svg-area"></div>
   <div class="tools">
     <ul id="tool-list">
-      <li ng-click="slideToggleColor()" class="color tool">
+      <li ng-click="slideToggleColor()" class="tool">
         <ul id="color-list">
           <li id="color1" class="color tool select"></li>
           <li id="color2" class="color tool"></li>
@@ -15,10 +15,10 @@
           <li id="color9" class="color tool"></li>
         </ul>
       </li>
-      <li>
+      <li class="tool">
         <ul id="line-type-list">
-          <li id="line-type-line" class="color tool select"></li>
-          <li id="line-type-wave" class="color tool"></li>
+          <li id="line-type-line" class="tool"></li>
+          <li id="line-type-wave" class="tool"></li>
         </ul>
       </li>
     </ul>
@@ -26,8 +26,8 @@
 
   </div>
 </div>
- -->
-<div id="main-view" style="background-color:#eee;">
+
+<!-- <div id="main-view" style="background-color:#eee;">
 <div id="svg-area" style="border:solid 1px gray;"></div>
 <div class="tools" style="/*height:20px;*/">
    <div id="color-box" style="position:relative;">
@@ -49,6 +49,4 @@
 <div class="line-type tool" id="line-type" ng-click="toggleLineType(lineType)">{{lineType}}</div>
 <div class="delete tool" id="delete" ng-click="removeLine()">DEL</div>
 <div><button onclick="javascript:hoge()"></button></div>
-<!--   <div style="height:200px;border:gray 1px solid;"></div>
- -->
-</div>
+</div> -->
