--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -7,7 +7,7 @@
 <!--           <li id="color1" class="color tool selected"></li>
           <li id="color2" class="color tool"></li>
           <li id="color3" class="color tool"></li> -->
-          <li class="tool color color-{{color}}" ng-class="{'selected': isSelectedColor(color)}" ng-repeat="color in colorList" ng-click="selectColor(color)"></li>
+          <li class="tool color color-{{color}}" ng-class="{'selected': isSelectedColor(color)}" ng-repeat="color in colorList" ng-click="selectColor(color, $event)"></li>
         </ul>
       </li>
       <li id="line-type-list-base" class="tool tool-list-base">
