--- a/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
+++ b/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
@@ -72,6 +72,17 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:text="No data..."/>
 
+        <com.melnykov.fab.FloatingActionButton
+            xmlns:fab="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/button_floating_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_action_content_new"
+            fab:fab_colorNormal="@android:color/holo_red_dark"
+            fab:fab_colorPressed="@android:color/holo_red_light"/>
+
     </FrameLayout>
 
 </RelativeLayout>
