--- a/android/app/src/main/res/layout/fragment_book_detail.xml
+++ b/android/app/src/main/res/layout/fragment_book_detail.xml
@@ -1,8 +1,9 @@
-<RelativeLayout
+<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <!--<view-->
         <!--android:layout_width="wrap_content"-->
@@ -14,70 +15,34 @@
         <!--android:layout_alignParentStart="true" />-->
 
     <LinearLayout
-        android:orientation="horizontal"
+        style="@style/card.main_layout"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:layout_height="fill_parent">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:layout_weight="4">
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="bottom">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/textView"
-                android:hint="title"
-                android:padding="4dp" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/textView2"
-                android:hint="author"
-                android:padding="4dp" />
-
-        </LinearLayout>
+        <it.gmariotti.cardslib.library.view.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_book_detail"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            card:card_layout_resourceID="@layout/card_book_detail"
+            />
 
     </LinearLayout>
 
-    <EditText
+    <it.gmariotti.cardslib.library.view.component.CardShadowView
+        style="@style/card.shadow_outer_layout"
+        android:id="@+id/card_shadow_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/textView3"
-        android:layout_gravity="right|bottom"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:hint="review"
-        android:selectAllOnFocus="true"
-        android:maxLength="140" />
+        android:layout_height="wrap_content"/>
 
-    <Switch
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/card_content_expand_layout"
+        style="@style/card.main_contentExpand"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="公開する"
-        android:id="@+id/switch1"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-</RelativeLayout>
+        />
+</LinearLayout>
