--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:showIn="@layout/fragment_book_detail" android:layout_height="fill_parent" android:layout_width="fill_parent">
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    tools:showIn="@layout/fragment_book_detail">
 
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:baselineAligned="false">
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="300dp"
             android:layout_weight="4">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView"
+                android:src="@drawable/photo_placeholder"
+                android:background="#f0f0f0"
+                android:scaleType="center"
+                android:layout_margin="8dp"/>
 
         </FrameLayout>
 
@@ -27,7 +39,10 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageButton" />
+                android:padding="4dp"
+                android:id="@+id/imageButton"
+                android:src="@android:drawable/ic_menu_search"
+                android:background="@drawable/btn_common_back"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -65,6 +80,8 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:text="公開する"
         android:id="@+id/switch1"
         android:layout_below="@+id/textView3"
