--- a/android/app/src/main/res/layout/fragment_book_detail.xml
+++ b/android/app/src/main/res/layout/fragment_book_detail.xml
@@ -18,7 +18,7 @@
         style="@style/card.main_layout"
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content">
 
         <it.gmariotti.cardslib.library.view.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,10 +39,4 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
-    <FrameLayout
-        android:id="@+id/card_content_expand_layout"
-        style="@style/card.main_contentExpand"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
 </LinearLayout>
