--- a/android/app/src/main/res/menu/book_search.xml
+++ b/android/app/src/main/res/menu/book_search.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:one="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/searchView"
+        android:id="@+id/search_view"
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always"
         android:title="書籍検索"
