--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -18,14 +18,16 @@
             android:layout_height="300dp"
             android:layout_weight="4">
 
-            <ImageView
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView"
-                android:src="@drawable/photo_placeholder"
-                android:background="#f0f0f0"
+                android:id="@+id/book_photo"
+                android:drawableTop="@drawable/photo_placeholder"
+                android:paddingTop="48dp"
+                android:background="@drawable/btn_rect_common_back"
                 android:scaleType="center"
-                android:layout_margin="8dp"/>
+                android:layout_margin="8dp"
+                android:text="Click here to register Photo!"/>
 
         </FrameLayout>
 
@@ -42,13 +44,13 @@
                 android:padding="4dp"
                 android:id="@+id/btn_search_book"
                 android:src="@android:drawable/ic_menu_search"
-                android:background="@drawable/btn_common_back"/>
+                android:background="@drawable/btn_oval_common_back"/>
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/textView"
+                android:id="@+id/txt_title"
                 android:hint="title"
                 android:padding="4dp" />
 
@@ -56,7 +58,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/textView2"
+                android:id="@+id/txt_author"
                 android:hint="author"
                 android:padding="4dp" />
 
