--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -2,82 +2,24 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    tools:showIn="@layout/fragment_book_detail">
+    android:layout_width="fill_parent">
 
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
-        android:baselineAligned="false">
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:layout_weight="4">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/book_photo"
-                android:drawableTop="@drawable/photo_placeholder"
-                android:paddingTop="48dp"
-                android:background="@drawable/btn_rect_common_back"
-                android:scaleType="center"
-                android:layout_margin="8dp"
-                android:text="Click here to register Photo!"/>
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:gravity="bottom">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="4dp"
-                android:id="@+id/btn_search_book"
-                android:src="@android:drawable/ic_menu_search"
-                android:background="@drawable/btn_oval_common_back"/>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/txt_title"
-                android:hint="title"
-                android:padding="4dp" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/txt_author"
-                android:hint="author"
-                android:padding="4dp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/textView3"
+        android:id="@+id/txt_review"
         android:layout_gravity="right|bottom"
-        android:layout_below="@+id/linearLayout"
+        android:layout_below="@+id/txt_author"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="review"
         android:selectAllOnFocus="true"
-        android:maxLength="140" />
+        android:maxLength="140"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp" />
 
     <Switch
         android:layout_width="wrap_content"
@@ -86,9 +28,54 @@
         android:layout_marginBottom="16dp"
         android:text="公開する"
         android:id="@+id/switch1"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/txt_review"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/book_photo"
+        android:drawableTop="@drawable/photo_placeholder"
+        android:paddingTop="48dp"
+        android:background="@drawable/btn_rect_common_back"
+        android:scaleType="center"
+        android:layout_margin="8dp"
+        android:text="Click here to register Photo!"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txt_title"
+        android:hint="title"
+        android:padding="4dp"
+        android:layout_below="@+id/book_photo"
+        android:layout_toLeftOf="@+id/btn_search_book"
+        android:layout_marginLeft="8dp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txt_author"
+        android:hint="author"
+        android:padding="4dp"
+        android:layout_below="@+id/txt_title"
+        android:layout_toLeftOf="@+id/btn_search_book"
+        android:layout_marginLeft="8dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:id="@+id/btn_search_book"
+        android:src="@android:drawable/ic_menu_search"
+        android:background="@drawable/btn_oval_common_back"
+        android:layout_below="@+id/book_photo"
+        android:layout_alignRight="@+id/book_photo"
+        android:layout_alignEnd="@+id/book_photo"
+        android:layout_margin="8dp" />
 
 
 </RelativeLayout>
