web: svgがdistにコピーされるようGruntFile修正。svgの配置変更。

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -9,7 +9,7 @@
       </li>
       <li id="line-type-list-base" class="tool tool-list-base">
         <ul id="line-type-list" class="tool-list-item">
-          <li class="tool line-type" ng-class="{'selected': isSelectedLineType(lineType)}" ng-repeat="lineType in lineTypeList" ng-click="selectLineType(lineType)"><img src="images/{{lineType}}.svg"/></li>
+          <li class="tool line-type" ng-class="{'selected': isSelectedLineType(lineType)}" ng-repeat="lineType in lineTypeList" ng-click="selectLineType(lineType)"><img src="images/line-type-svg/{{lineType}}.svg"/></li>
         </ul>
       </li>
     </ul>
