--- a/android/app/src/main/res/layout/activity_photo_detail.xml
+++ b/android/app/src/main/res/layout/activity_photo_detail.xml
@@ -3,5 +3,5 @@
     android:id="@+id/photo_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".bookEditActivity"
+    tools:context=".PhotoDetailActivity"
     tools:ignore="MergeRootFrame" />
