web: Debugサービスで画面にメッセージを表示できるようにした。

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,4 +1,5 @@
 <div id="main-view" style="background-color:#eee;">
+<pre>{{debug|json}}</pre>
 <div id="svg-area"></div>
   <div class="tools">
     <ul id="tool-list">
