android: SurfaceViewで実装開始。とりあえず画像表示OK

--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -10,12 +10,18 @@
         <!--android:id="@+id/webView"-->
         <!--android:layout_above="@+id/loadImage" />-->
 
-    <ImageView
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/photo"-->
+        <!--android:layout_above="@+id/load_image"-->
+        <!--android:scaleType="centerInside"/>-->
+
+    <SurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/photo"
-        android:layout_above="@+id/load_image"
-        android:scaleType="centerInside"/>
+        android:layout_above="@+id/load_image" />
 
     <Button
         android:layout_width="wrap_content"
