--- a/android/app/src/main/res/layout/fragment_book_detail.xml
+++ b/android/app/src/main/res/layout/fragment_book_detail.xml
@@ -1,11 +1,16 @@
-<LinearLayout
+<ScrollView
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp"
-    android:orientation="vertical">
+    android:id="@+id/scrollView">
 
-    <!--<view-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="8dp"
+        android:orientation="vertical">
+
+        <!--<view-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--class="com.etsy.android.grid.util.DynamicHeightImageView"-->
@@ -14,29 +19,29 @@
         <!--android:layout_alignParentLeft="true"-->
         <!--android:layout_alignParentStart="true" />-->
 
-    <LinearLayout
-        style="@style/card.main_layout"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <it.gmariotti.cardslib.library.view.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_book_detail"
+        <LinearLayout
+            style="@style/card.main_layout"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            card:card_layout_resourceID="@layout/card_book_detail"
-            />
+            android:layout_height="wrap_content">
+
+            <it.gmariotti.cardslib.library.view.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_book_detail"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                card:card_layout_resourceID="@layout/card_book_detail" />
+
+        </LinearLayout>
+
+        <it.gmariotti.cardslib.library.view.component.CardShadowView
+            style="@style/card.shadow_outer_layout"
+            android:id="@+id/card_shadow_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
+</ScrollView>
 
-    <it.gmariotti.cardslib.library.view.component.CardShadowView
-        style="@style/card.shadow_outer_layout"
-        android:id="@+id/card_shadow_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
