--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -28,8 +28,19 @@
         android:layout_height="wrap_content"
         android:text="New Button"
         android:id="@+id/load_image"
+        android:clickable="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:clickable="true" />
+        android:layout_centerHorizontal="true" />
+
+    <view
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        class="jp.caliconography.one_liners.widget.PopupMenu"
+        android:id="@+id/view"
+        android:layout_toEndOf="@+id/load_image"
+        android:layout_toRightOf="@+id/load_image"
+        android:layout_alignBottom="@+id/photo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
