--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <view
+    <view xmlns:one-liners="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         class="jp.caliconography.one_liners.widget.PopupMenu"
@@ -41,6 +41,7 @@
         android:layout_toRightOf="@+id/load_image"
         android:layout_alignBottom="@+id/photo"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        one-liners:item_interval="100" />
 
 </RelativeLayout>
