--- a/android/app/src/main/res/values/attrs.xml
+++ b/android/app/src/main/res/values/attrs.xml
@@ -5,5 +5,7 @@
     </declare-styleable>
     <declare-styleable name="PopupMenu">
         <attr name="item_interval" format="float" />
+        <attr name="open_duration" format="integer" />
+        <attr name="close_duration" format="integer" />
     </declare-styleable>
 </resources>
