--- a/android/app/src/main/res/layout/popup_menu.xml
+++ b/android/app/src/main/res/layout/popup_menu.xml
@@ -2,42 +2,43 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/popup_menu_root">
 
-    <ImageView
-        android:id="@+id/menu1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_reflection_none_red"
-        android:layout_gravity="bottom|left" />
+    <!--<ImageView-->
+    <!--android:id="@+id/menu1"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/icon_reflection_none_red"-->
+    <!--android:layout_gravity="bottom|left" />-->
 
-    <ImageView
-        android:id="@+id/menu2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_reflection_arrow_red"
-        android:layout_gravity="bottom|left" />
+    <!--<ImageView-->
+    <!--android:id="@+id/menu2"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/icon_reflection_arrow_red"-->
+    <!--android:layout_gravity="bottom|left" />-->
 
-    <ImageView
-        android:id="@+id/menu3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_reflection_exclamation_red"
-        android:layout_gravity="bottom|left" />
+    <!--<ImageView-->
+    <!--android:id="@+id/menu3"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/icon_reflection_exclamation_red"-->
+    <!--android:layout_gravity="bottom|left" />-->
 
-    <ImageView
-        android:id="@+id/menu4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_reflection_home_red"
-        android:layout_gravity="bottom|left" />
+    <!--<ImageView-->
+    <!--android:id="@+id/menu4"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@drawable/icon_reflection_home_red"-->
+    <!--android:layout_gravity="bottom|left" />-->
 
-    <ImageView
-        android:id="@+id/menu5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:src="@drawable/icon_reflection_heart_red" />
+    <!--<ImageView-->
+    <!--android:id="@+id/menu5"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|left"-->
+    <!--android:src="@drawable/icon_reflection_heart_red" />-->
 
     <Button
         android:id="@+id/popup_menu_base"
