--- a/android/app/src/main/res/menu/book_list.xml
+++ b/android/app/src/main/res/menu/book_list.xml
@@ -2,8 +2,8 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/save_photo"
-        android:icon="@drawable/ic_action_save"
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_action_refresh"
         android:showAsAction="always"
-        android:title="保存" />
+        android:title="再読み込み" />
 </menu>
